Reorganization and spring jta configuration